# wasted_vote

./: .gitignore  LICENSE  README.md  nec.sh  wasted-vote.cabal
app/: Brute.hs  Election.hs  Lrm.hs  Main.hs  Output.hs  Party.hs  Quota.hs  WastedVote.hs
tests/: test1.json  test2.json
